--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,6 +10,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style-type: none;
+  outline: none;
 }
 
 body {
@@ -64,7 +65,13 @@ footer a:hover {
   padding: 55px;
 }
 
-/* ************************************************ */
+.section-1,
+.section-3,
+.contact {
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.08);
+}
+
+/* ****************** Main section *********************** */
 
 main {
   min-height: 100vh;
@@ -74,4 +81,80 @@ main {
 
 .img-banner {
   background: url('../img/banner.jpg') right/cover;
+}
+
+/* ********************** Other sections ****************** */
+
+.section-1,
+.section-2 {
+  display: grid;
+  min-height: 400px;
+}
+
+.section-1 {
+  grid-template-columns: 1fr 2fr;
+}
+
+.section-2 {
+  grid-template-columns: 2fr 1fr;
+}
+
+.section-1 .img {
+  background: url('../img/img-left.jpg') center/cover;
+}
+
+.section-2 .img {
+  background: url('../img/img-right.jpg') center/cover;
+}
+
+/* ******************** Contact form ************************ */
+
+.contact {
+  text-align: center;
+  padding: 60px 0;
+}
+
+.form-grid {
+  width: 85%;
+  max-width: 600px;
+  margin: 30px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px 224px;
+  grid-template-areas:
+    'input1 input2'
+    'textarea textarea';
+  gap: 10px;
+}
+
+label {
+  font-weight: 600;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+}
+
+input[type='text'],
+input[type='email'],
+textarea {
+  width: 100%;
+  margin: 20px 0 40px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  transition: 0.2s;
+}
+
+input[type='text']:focus,
+input[type='email']:focus,
+textarea:focus {
+  border: 1px solid skyblue;
+}
+
+textarea {
+  resize: none;
+  height: 180px;
+}
+
+.textarea {
+  grid-area: textarea;
 }
