--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -158,3 +158,41 @@ textarea {
 .textarea {
   grid-area: textarea;
 }
+
+/* ******************** Footer ************************ */
+
+footer {
+  padding: 70px 0 90px;
+  position: relative;
+}
+
+footer::before {
+  content: '';
+  position: absolute;
+  width: 90%;
+  height: 1px;
+  background: rgba(0, 0, 0, 0.08);
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+}
+
+footer ul {
+  display: flex;
+  justify-content: space-between;
+  width: 33%;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+footer a {
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
